# pyfuncs

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: binance.py  multithread_scrape.py  save_proxies.py  simple_scrape.py  thread_fn.py
src/pyfuncs/: scripts.py  threaded_fn.py  utils.py
src/pyfuncs/apis/: binance.py
src/pyfuncs/fua/: browser_uas.py  fakeuseragent.py
src/pyfuncs/ml/: utils.py
src/pyfuncs/proxies/: webshare.py
src/pyfuncs/scraper/: rotatable_session.py  rq.py  rq_base.py  sel.py  sel_base.py
src/pyfuncs/text/: utils.py
