[metadata]
name = pyfuncs
version = 0.0.1
author = Charco Hui
author_email = charco.hui@auckland.ac.nz
description = Handy functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrk623/pyfuncs
project_urls =
    Bug Tracker = https://github.com/chrk623/pyfuncs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    lxml >= 4.6
    numpy >= 1.21
    pandas >= 1.3
    requests >= 2.26
    retry >= 0.9
    selenium >= 4.0.0
    selenium-wire >= 4.5
    undetected-chromedriver > 3.0

[options.packages.find]
where = src